force-app/main/default/objects/GeneralSetting__c/GeneralSetting__c.object-meta.xml
<CustomObject>
    <label>Configuração Geral</label>
    <nameField>
        <label>Configuração</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configurações Gerais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>