force-app/main/default/objects/GeneralSetting__c/fields/AllowList__c.field-meta.xml
<CustomField>
    <fullName>AllowList__c</fullName>
    <label>Lista de Permissões</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Cobilling</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Desconto</fullName>
            </value>
            <value>
                <fullName>Desconto Serviços Eventuais</fullName>
            </value>
            <value>
                <fullName>Home assist</fullName>
            </value>
            <value>
                <fullName>MMS</fullName>
            </value>
            <value>
                <fullName>Multa</fullName>
            </value>
            <value>
                <fullName>Multa Serviços Eventuais</fullName>
            </value>
            <value>
                <fullName>Multi Vivo</fullName>
            </value>
            <value>
                <fullName>Multi Vivo Serviços Eventuais</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Outros Serviços Eventuais</fullName>
            </value>
            <value>
                <fullName>Pacote Adicional</fullName>
            </value>
            <value>
                <fullName>Pacote Adicional Serviços Eventuais</fullName>
            </value>
            <value>
                <fullName>Plano</fullName>
            </value>
            <value>
                <fullName>Planos Serviços Eventuais</fullName>
            </value>
            <value>
                <fullName>Prorata</fullName>
            </value>
            <value>
                <fullName>Seguro</fullName>
            </value>
            <value>
                <fullName>Seguro Serviços Eventuais</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>SVA Avulso Doações</fullName>
            </value>
            <value>
                <fullName>SVA Avulso Doações Serviços Eventuais</fullName>
            </value>
            <value>
                <fullName>Travel Serviços Eventuais</fullName>
            </value>
            <value>
                <fullName>Travel	Travel</fullName>
            </value>
            <value>
                <fullName>VAS</fullName>
            </value>
            <value>
                <fullName>Voice</fullName>
            </value>
            <value>
                <fullName>VOIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>