force-app/main/default/objects/GeneralSetting__c/fields/CaseRecordType__c.field-meta.xml
<CustomField>
    <fullName>CaseRecordType__c</fullName>
    <label>Formulário</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>EmailTrigger</fullName>
                <label>HDE - Acionamento E-mail</label>
            </value>
            <value>
                <fullName>WalletProcessesEscalation</fullName>
                <label>HDE - Carteira Processos Escalonamento</label>
            </value>
            <value>
                <fullName>GoldProcessesEscalation</fullName>
                <label>HDE - Gold Processos Escalonamento</label>
            </value>
            <value>
                <fullName>StoreProcessesEscalation</fullName>
                <label>HDE - Loja Processos Escalonamento</label>
            </value>
            <value>
                <fullName>CommunityOuvidoriaProcessesEscalation</fullName>
                <label>HDE - Ouvidoria Comunidades Processos e Escalonamento</label>
            </value>
            <value>
                <fullName>OuvidoriaProcessesEscalation</fullName>
                <label>HDE - Ouvidoria Processos Escalonamento</label>
            </value>
            <value>
                <fullName>PlatinumProcessesEscalation</fullName>
                <label>HDE - Platinum Processos Escalonamento</label>
            </value>
            <value>
                <fullName>PurpuraProcessesEscalation</fullName>
                <label>HDE - Púrpura - Processos e Escalonamento</label>
            </value>
            <value>
                <fullName>ResellerStoreProcessesEscalation</fullName>
                <label>HDE - Revendas Processos e Escalonamento</label>
            </value>
            <value>
                <fullName>SilverProcessesEscalation</fullName>
                <label>HDE - Silver - Processos e Escalonamento</label>
            </value>
            <value>
                <fullName>VivoVProcessesEscalation</fullName>
                <label>HDE - V Processos Escalonamento</label>
            </value>
            <value>
                <fullName>VPRStoreProcessesEscalation</fullName>
                <label>HDE - VPR Processos Escalonamento</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>