force-app/main/default/objects/GeneralSetting__c/fields/CaseStatus__c.field-meta.xml
<CustomField>
    <fullName>CaseStatus__c</fullName>
    <label>Status Caso</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aguardando</fullName>
            </value>
            <value>
                <fullName>A Iniciar</fullName>
            </value>
            <value>
                <fullName>Atenção</fullName>
            </value>
            <value>
                <fullName>Crítico</fullName>
            </value>
            <value>
                <fullName>Em Andamento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>