force-app/main/default/objects/GeneralSetting__c/fields/ChargeCategory__c.field-meta.xml
<CustomField>
    <fullName>ChargeCategory__c</fullName>
    <description>O tipo na visão de negócio que um item de fatura é classificado.</description>
    <label>Tipo do Item</label>
    <length>80</length>
    <type>Text</type>
</CustomField>