force-app/main/default/objects/GeneralSetting__c/fields/CustomerSegment__c.field-meta.xml
<CustomField>
    <fullName>CustomerSegment__c</fullName>
    <label>Segmento do Cliente</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GOLD</fullName>
            </value>
            <value>
                <fullName>LOJA</fullName>
            </value>
            <value>
                <fullName>OMNICHANNEL</fullName>
            </value>
            <value>
                <fullName>OUVIDORIA</fullName>
            </value>
            <value>
                <fullName>PAP</fullName>
            </value>
            <value>
                <fullName>PLATINUM</fullName>
            </value>
            <value>
                <fullName>PRIME</fullName>
            </value>
            <value>
                <fullName>PÚRPURA</fullName>
            </value>
            <value>
                <fullName>REVENDA</fullName>
            </value>
            <value>
                <fullName>SILVER</fullName>
            </value>
            <value>
                <fullName>SUPORTE A LOJAS</fullName>
            </value>
            <value>
                <fullName>TELEVENDAS</fullName>
            </value>
            <value>
                <fullName>VIVO V</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>