force-app/main/default/objects/GeneralSetting__c/fields/DynamicValues__c.field-meta.xml
<CustomField>
    <fullName>DynamicValues__c</fullName>
    <formula>CASE(ChargeCategory__c,
                &quot;Bonus&quot;, &quot;Serviços Mensais&quot;,
                &quot;Bonus Serviços Eventuais&quot;, &quot;Serviços Eventuais&quot;,
                &quot;Bundcombdig Serviços Eventuais&quot;, &quot;Serviços Eventuais&quot;,
                &quot;Cobilling&quot;, &quot;Ligações&quot;,
                &quot;Data&quot;, &quot;Serviços Eventuais&quot;,
                &quot;MMS&quot;, &quot;Serviços Eventuais&quot;,
                &quot;Multa Serviços Eventuais&quot;, &quot;Serviços Eventuais&quot;,
                &quot;Multiv&quot;, &quot;Serviços Mensais&quot;,
                &quot;Outros Serviços Eventuais&quot;, &quot;Serviços Eventuais&quot;,
                &quot;Outros Serviços Mensais&quot;, &quot;Serviços Mensais&quot;,
                &quot;Pacote Adicional&quot;, &quot;Serviços Mensais&quot;,
                &quot;Pacote Adicional Serviços Eventuais&quot;, &quot;Serviços Eventuais&quot;,
                &quot;Plano&quot;, &quot;Serviços Mensais&quot;,
                &quot;Prorata&quot;, &quot;Serviços Mensais&quot;,
                &quot;Seguro&quot;, &quot;Serviços Mensais&quot;,
                &quot;SMS&quot;, &quot;Serviços Eventuais&quot;,
                &quot;SVA&quot;, &quot;Serviços Mensais&quot;,
                &quot;Travel&quot;, &quot;Serviços Mensais&quot;,
                &quot;VAS&quot;, &quot;Serviços Eventuais&quot;,
                &quot;Voice&quot;, &quot;Ligações&quot;,
                &quot;VOIP&quot;, &quot;Ligações&quot;,
                &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valores Dinâmicos</label>
    <type>Text</type>
</CustomField>