force-app/main/default/objects/GeneralSetting__c/fields/IsConvergent__c.field-meta.xml
<CustomField>
    <fullName>IsConvergent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo criado para identificar se algum registro é identificado como convergente.</description>
    <label>Convergente</label>
    <type>Checkbox</type>
</CustomField>