force-app/main/default/objects/GeneralSetting__c/fields/NotificationEmailToNCases__c.field-meta.xml
<CustomField>
    <fullName>NotificationEmailToNCases__c</fullName>
    <label>Notificação Email para N Casos</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>