force-app/main/default/objects/GeneralSetting__c/fields/NotificationEmailToOneCase__c.field-meta.xml
<CustomField>
    <fullName>NotificationEmailToOneCase__c</fullName>
    <label>Notificação E-mail para Um Caso</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>