force-app/main/default/objects/GeneralSetting__c/fields/NotificationLittleBellToNCases__c.field-meta.xml
<CustomField>
    <fullName>NotificationLittleBellToNCases__c</fullName>
    <label>Notificação Sininho para N Casos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>