force-app/main/default/objects/GeneralSetting__c/fields/NotificationLittleBellToOneCase__c.field-meta.xml
<CustomField>
    <fullName>NotificationLittleBellToOneCase__c</fullName>
    <label>Notificação Sininho para um Caso</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>