force-app/main/default/objects/GeneralSetting__c/fields/NotificationName__c.field-meta.xml
<CustomField>
    <fullName>NotificationName__c</fullName>
    <label>Nome Notificação</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>