force-app/main/default/objects/GeneralSetting__c/fields/NotifiedUser__c.field-meta.xml
<CustomField>
    <fullName>NotifiedUser__c</fullName>
    <label>Usuário Notificado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
                <default>true</default>
                <label>Proprietário</label>
            </value>
            <value>
                <fullName>FormerOwner</fullName>
                <label>Antigo Proprietário</label>
            </value>
            <value>
                <fullName>UserAbove2nd</fullName>
                <label>Usuário Acima da Hierarquia Vigente (2º Nível)</label>
            </value>
            <value>
                <fullName>UserAbove3rd</fullName>
                <label>Usuário Acima da Hierarquia Vigente (3º Nível)</label>
            </value>
            <value>
                <fullName>RoleOuvidoriaAdmPerformance</fullName>
                <label>Usuários com papel “Atendimento Ouvidoria Adm Performance”</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>