force-app/main/default/objects/GeneralSetting__c/fields/PlanName__c.field-meta.xml
<CustomField>
    <fullName>PlanName__c</fullName>
    <label>Nome do Plano</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>LINHA ADICIONAL VIVO FAMILIA 100GB PLN - MENSAL</fullName>
            </value>
            <value>
                <fullName>LINHA ADICIONAL VIVO FAMILIA 60GB PLN</fullName>
            </value>
            <value>
                <fullName>LINHA ADICIONAL VIVO POS 30GB PLN</fullName>
            </value>
            <value>
                <fullName>LINHA ADICIONAL VIVO V</fullName>
            </value>
            <value>
                <fullName>TITULAR VIVO FAMILIA 100GB PLN - MENSAL</fullName>
            </value>
            <value>
                <fullName>TITULAR VIVO FAMILIA 60GB PLN</fullName>
            </value>
            <value>
                <fullName>TITULAR VIVO POS 30GB+</fullName>
            </value>
            <value>
                <fullName>TITULAR VIVO POS 30GB PLN</fullName>
            </value>
            <value>
                <fullName>TITULAR VIVO V</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>