force-app/main/default/objects/GeneralSetting__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <label>Subfluxo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>