force-app/main/default/objects/GeneralSetting__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Tipo do Produto</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CONVERGENTE</fullName>
                <isActive>false</isActive>
                <label>CONVERGENTE</label>
            </value>
            <value>
                <fullName>FIXA</fullName>
            </value>
            <value>
                <fullName>MÓVEL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>