force-app/main/default/objects/GeneralSetting__c/fields/RelatedFlow__c.field-meta.xml
<CustomField>
    <fullName>RelatedFlow__c</fullName>
    <label>Fluxo Relacionado</label>
    <type>TextArea</type>
</CustomField>