force-app/main/default/objects/GeneralSetting__c/fields/StepCode__c.field-meta.xml
<CustomField>
    <fullName>StepCode__c</fullName>
    <label>Código do Step</label>
    <type>TextArea</type>
</CustomField>