force-app/main/default/objects/GeneralSetting__c/fields/TitleNotificationLittleBellToNCases__c.field-meta.xml
<CustomField>
    <fullName>TitleNotificationLittleBellToNCases__c</fullName>
    <label>Título Notificação Sininho para N Casos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>