force-app/main/default/objects/GeneralSetting__c/fields/TitleNotificationLittleBellToOneCase__c.field-meta.xml
<CustomField>
    <fullName>TitleNotificationLittleBellToOneCase__c</fullName>
    <label>Título Notificação Sininho para um Caso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>