force-app/main/default/objects/GeneralSetting__c/fields/TriggerMoments__c.field-meta.xml
<CustomField>
    <fullName>TriggerMoments__c</fullName>
    <label>Momentos de Disparo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>StatusChange</fullName>
                <label>Mudança de Status</label>
            </value>
            <value>
                <fullName>RoutingNewOwner</fullName>
                <label>Roteamento para Novo Proprietário</label>
            </value>
            <value>
                <fullName>SLAtoExpire</fullName>
                <label>SLA à Vencer</label>
            </value>
            <value>
                <fullName>ExpiredSLA</fullName>
                <label>SLA Vencido</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>