force-app/main/default/objects/GeneralSetting__c/recordTypes/ChargeGroupingSetting.recordType-meta.xml
<RecordType>
    <fullName>ChargeGroupingSetting</fullName>
    <active>true</active>
    <description>Configuração de Agrupamento de Item para representar a visão de negócio quando o tipo de um Item for mais específico ou genérico que a fonte da informação.</description>
    <label>Configuração de Agrupamento de Item</label>
</RecordType>