force-app/main/default/objects/GeneralSetting__c/recordTypes/ConvergentPlanSetting.recordType-meta.xml
<RecordType>
    <fullName>ConvergentPlanSetting</fullName>
    <active>true</active>
    <description>Usado para configurar/cadastrar os planos elegíveis ao desconto convergente</description>
    <label>Configuração Planos Convergentes</label>
</RecordType>