force-app/main/default/objects/GeneralSetting__c/recordTypes/ServiceGroupSetting.recordType-meta.xml
<RecordType>
    <fullName>ServiceGroupSetting</fullName>
    <active>true</active>
    <description>Configuração de Grupos de Atendimento por ação, assim podendo ser comparado o Grupo de Atendimento do Usuário e verificado se ele está contido em determinado agrupamento.</description>
    <label>Configuração Grupo de Atendimento</label>
</RecordType>