force-app/main/default/objects/GeneralSetting__c/recordTypes/UserComunicationSetup.recordType-meta.xml
<RecordType>
    <fullName>UserComunicationSetup</fullName>
    <active>true</active>
    <description>Configuração de Notificações de Usuários, informa o tipo de notificação/email que cada tipo de usuário deve receber dependendo do status, momento de trigger, recordtype do caso</description>
    <label>Configuração de Notificações de Usuários</label>
</RecordType>