force-app/main/default/objects/GeneralSetting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Process__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OperatorSegment__c</columns>
    <columns>ProductType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>