force-app/main/default/objects/GeneralSetting__c/listViews/SegmentActions_Mobile.listView-meta.xml
<ListView>
    <fullName>SegmentActions_Mobile</fullName>
    <columns>NAME</columns>
    <columns>StepCode__c</columns>
    <columns>OperatorSegment__c</columns>
    <columns>ProductType__c</columns>
    <columns>RelatedFlow__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>GeneralSetting__c.ServiceGroupSetting</value>
    </filters>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ProductType__c</field>
        <operation>includes</operation>
        <value>MÓVEL</value>
    </filters>
    <label>Ações por Segmento - Móvel</label>
</ListView>